Update the template.

--- a/templates/db.html
+++ b/templates/db.html
@@ -9,7 +9,7 @@
         {% if not known %}
         <p>Please to meet you!</p>
         {% else %}
-        <p>Happy to see you again.</p>
+        <p>Happy to see you again, {{ name }}.</p>
         {% endif %}
     </div>
     {{ wtf.quick_form(form) }}
